--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "supertest": "^6.1.3"
   },
   "dependencies": {
+    "angular": "^1.8.2",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jsdom": "^16.4.0",
+    "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "socket.io": "^3.1.2"
   }
