--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "dev": "nodemon server.js",
     "start": "node server.js"
   },
+  "engines": {
+    "node": ">= 6.9.4",
+    "npm": ">= 4.4.0"
+  },
   "repository": {
     "type": "git",
     "url": ""
