--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "node server.js"
   },
   "engines": {
-    "node": ">= 6.9.4",
-    "npm": ">= 4.4.0"
+    "node": "7.10.0",
+    "npm": "4.2.0"
   },
   "repository": {
     "type": "git",
