--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha || exit 0",
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "heroku-postbuild": "cd public && npm start"
   },
   "engines": {
     "node": "14.17.0",
@@ -30,12 +31,14 @@
     "supertest": "^6.1.3"
   },
   "dependencies": {
+    "browserify": "^17.0.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jsdom": "^16.4.0",
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
+    "requirejs": "^2.3.6",
     "socket.io": "^3.1.2"
   }
 }
